# gol_opengl_v1

./: .gitmodules  CMakeLists.txt  main.cpp
common/: TimeCounter.cpp  TimeCounter.h  Vectors.h
game_objects/: SpriteComponent.cpp  SpriteComponent.h
include/: variant.h
render/: DrawCommands.h  GLFbo.cpp  GLFbo.h  GLShader.cpp  GLShader.h  GLShaderProgram.cpp  GLShaderProgram.h  GLTexture.cpp  GLTexture.h  RenderResourceManager.cpp  RenderResourceManager.h  RenderResources.h  Renderer.cpp  Renderer.h  RendererQue.cpp  RendererQue.h
resource/: TextureResource.cpp  TextureResource.h
workdir/shaders/: basic_sprite.frag  gameoflife.frag  gameoflife.vert
